# SystemIntegration

./: .gitignore
01_Miscellanous/: google.sh  paymentiframe.html
02_Data_files/: package.json  readData.js  readData.py
03_Modules/html_modules/: index.html  index.js  myModule.js
03_Modules/html_no_modules/: index.html  index.js  myModule.js
03_Modules/node_commonjs_modules/: index.js  myModule.js
03_Modules/python_modules/: main.py
03_Modules/python_modules/myModule/: __init__.py  file_one.py  file_two.py
04_encoding/: file.js  file.py
05_Python_env/03_poetryenv/: env.txt  pyproject.toml
07_Server_to_Server/03a_servers/flask/: main.py
07_Server_to_Server/node/: package.json  server.js
07_Server_to_Server/python/: main.py  pyproject.toml
08_env_variables/node/: index.js  package.json
08_env_variables/python/: main.py  pyproject.toml
09_Date/flask/: index.html  main.py  pyproject.toml
10_short_polling/: app.js  package-lock.json  package.json
10_short_polling/public/: index.html
11_long_polling/: app.js  package-lock.json  package.json
12_server_sent_events/node/: app.js
13_GitHub_webhooks/node_webhooks/: package-lock.json  package.json  server.js
13_GitHub_webhooks/python/: main.py  pyproject.toml
15_Assignments/01a/: me.yaml  package.json  server.js
15_Assignments/03a/data/: me.xml
15_Assignments/03a/node/: package.json
15_Assignments/04a/: app.js
15_Assignments/mandatory_1/01a/: package-lock.json
15_Assignments/mandatory_1/03a/flask/: pyproject.toml
15_Assignments/mandatory_1/04a/: package-lock.json  package.json
(+45 files in other folders)
