[tool.poetry]
name = "myflaskapp"
version = "0.1.0"
description = ""
authors = ["Mardin <mardineliassi57@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.2"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
